--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=spring-rabbitmq-producer
-server.port = 9000
+server.port = 9001
+spring.rabbitmq.addresses = localhost:5672
